--- a/Company.Application.Draw/Views/DrawToolView.xaml
+++ b/Company.Application.Draw/Views/DrawToolView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Company.Application.Draw.Views"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <GroupBox Header="{Binding}">
@@ -35,6 +36,38 @@
                     <Button ToolTip="删除所有元素" Command="{Binding DeleteAllCommand}" Content="&#xf014;" Style="{StaticResource IconButtonStyle}"/>
                 </StackPanel>
             </Grid>
+            <!--设计画笔的粗细按钮和颜色选择按钮-->
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal">
+                    <RadioButton ToolTip="细笔" MinWidth="8" MinHeight="8" Style="{StaticResource ToggleButtonEllipseStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="粗笔" MinWidth="11" MinHeight="11" Style="{StaticResource ToggleButtonEllipseStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="细笔" MinWidth="14" MinHeight="14" Style="{StaticResource ToggleButtonEllipseStyle}"/>
+                    <Rectangle Width="5"/>
+                </StackPanel>
+                <Separator Margin="10" Background="LightGray"/>
+                <StackPanel Orientation="Horizontal">
+                    <RadioButton ToolTip="红色" Background="Red" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="橙色" Background="Orange" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="黄色" Background="Yellow" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="绿色" Background="Green" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="青色" Background="Cyan" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="蓝色" Background="Blue" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="紫色" Background="Purple" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="白色" Background="White" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                    <RadioButton ToolTip="黑色" Background="Black" Style="{StaticResource ToggleButtonColorStyle}"/>
+                    <Rectangle Width="5"/>
+                </StackPanel>
+            </StackPanel>
         </StackPanel>
     </GroupBox>
 </UserControl>
